# ironclaw_tools

./: .gitignore  CONTRIBUTING.md  README.md  TODO_NEXT.md  local_computer_agent_requirements.md  pyproject.toml
.copilot/: README.md  change-strategy.md  mcp-tool-patterns.md  qa-checklist.md
agent_service/: __init__.py  config.py  main.py  mcp.py  models.py
agent_service/controller/: __init__.py  desktop.py
agent_service/skills/: __init__.py  browser_use.py  computer_use.py  read_screen.py  run_code.py  search_web.py  session_state.py  wechat_automation.py  wechat_fara.py
agent_service/vision/: __init__.py  fara_client.py
config/: .env.example
docs/: planner_prompts.md
ironclaw_skills/: skills_manifest.json
scripts/: start_ironclaw_stack.ps1  verify_real_ironclaw.ps1
tests/: test_fara_client.py  test_integration_ironclaw_mcp.py  test_integration_real_ironclaw.py  test_mcp_protocol.py  test_service_skills.py
